--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^12.3.4",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "next": "^13.5.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "sass": "^1.70.0"
   },
   "devDependencies": {
     "eslint": "7.32.0",
-    "eslint-config-next": "^12.3.4"
+    "eslint-config-next": "^13.5.6"
   }
 }
